Fix horizontal overflow for chrome desktop (#89)

--- a/assets/sass/_general.scss
+++ b/assets/sass/_general.scss
@@ -6,6 +6,7 @@ html,
 body {
   font-size: $fontSize;
   background-color: $background;
+  max-width: 100%;
 }
 
 body {
